--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -59,7 +59,7 @@
             </div>
         </div>
     </div>
-
+</nav>
     <!-- Hero Card -->
 
     <section>
@@ -75,6 +75,39 @@
             </div>
         </div>
     </section>
+
+    <div>
+        <h2 class="text-4xl px-2  mx-autopy-4 dark:text-white text-center font-bold mb-2">Explore our courses</h2>
+
+        <div class="mx-auto max-w-screen-xl md:flex">
+
+            <div class="py-4 px-2 flex justify-center">
+                <a
+                        class="block max-w-md p-6 border border-gray-200 rounded-lg hover:bg-cyan-400 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-cyan-700  " href=#
+                   target="_blank">
+                    <h5 class="max-w-md text-2xl font-bold text-gray-900 dark:text-white">Mortgages</h5>
+                    <p class="font-normal text-gray-700 dark:text-gray-400 line-clamp-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, </p>
+                </a>
+            </div>
+            <div class="py-4 px-2 flex justify-center">
+                <a
+                        class="block max-w-md p-6 border border-gray-200 rounded-lg hover:bg-cyan-400 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-cyan-700  " href=#
+                   target="_blank">
+                    <h5 class="text-2xl font-bold text-gray-900 dark:text-white">Savings</h5>
+                    <p class="font-normal text-gray-700 dark:text-gray-400 line-clamp-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, </p>
+                </a>
+            </div>
+
+            <div class="py-4 px-2 flex justify-center">
+                <a class="block max-w-md p-6 border border-gray-200 rounded-lg shadow-md hover:bg-cyan-400 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-cyan-700"
+                   href=#
+                   target="_blank">
+                    <h5 class="text-2xl font-bold text-gray-900 dark:text-white">Investing</h5>
+                    <p class="font-normal text-gray-700 dark:text-gray-400 line-clamp-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, </p>
+                </a>
+            </div>
+        </div>
+    </div>
 
     <!-- Footer -->
 
@@ -116,7 +149,6 @@
           </span>
                 </div>
             </div>
-        </div>
     </footer>
 
 </body>
