Light and Dark mode fix

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,10 +5,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Financial Literacy</title>
 </head>
-<body>
+<body class="bg-white dark:bg-gray-800">
 
 <!-- Navbar -->
-<nav class="bg-gray-800">
+<nav class="bg-white dark:bg-gray-800">
     <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
         <div class="relative flex h-16 items-center justify-between">
             <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -149,6 +149,7 @@
           </span>
                 </div>
             </div>
+        </div>
     </footer>
 
 </body>
