--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -8,7 +8,7 @@
 <body class="bg-white dark:bg-gray-800">
 
 <!-- Navbar -->
-<nav class="bg-white dark:bg-gray-800">
+<nav class="bg-white dark:bg-gray-800" id="navbar" th:fragments="nav">
     <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
         <div class="relative flex h-16 items-center justify-between">
             <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -61,6 +61,7 @@
         </div>
     </div>
 </nav>
+
 <!-- Hero Card -->
 
 <section>
@@ -130,8 +131,6 @@
 
 
 <!-- Footer -->
-
-
 <footer class="bg-white dark:bg-gray-800">
     <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-between">
@@ -171,6 +170,8 @@
     </div>
     </div>
 </footer>
+
+
 
 </body>
 </html>
